<resources>
    <string name="app_name">Registration App</string>
    <string name="login">Login</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="submit">Submit</string>
    <string name="error_while_logging_in">Error while logging in</string>
    <string name="registration">Registration</string>
    <string name="enter_name">Enter Name</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="logout">Logout</string>
    <string name="fetch_user">Fetch User</string>
    <string name="click_here_to_register">Click Here to Register</string>
</resources>